--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,16 +1,19 @@
+nav {
+  position: sticky;
+  top: 0;
+}
 .navbar {
   background-color: rgba(249, 249, 242, 1);
   width: 100%;
   height: 70px;
-  position: fixed;
-  top: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0px;
+  height: 75px;
 }
 .logo img {
-  max-width: 100px;
+  max-width: 120px;
   height: auto;
   position: absolute;
   top: 0px;
@@ -27,6 +30,7 @@
   list-style: none;
   padding: 0 10px;
   position: relative;
+  font-size: 25px;
 }
 .navbarlist li a {
   color: black;
@@ -78,7 +82,7 @@
 .add-to-cart {
   background-color: #000;
   color: #fff;
-  font-size: 10px;
+  font-size: 15px;
   padding: 8px 15px;
   border-radius: 10px;
   cursor: pointer;
@@ -139,7 +143,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    position: fixed;
+    float: right;
+    position: absolute;
     top: 60px;
     right: -300px;
     width: 200px;
@@ -148,12 +153,17 @@
     padding: 40px 0 0 10px;
     border-radius: 40px 0 0 0;
     border-left: 0.1px solid rgb(229, 240, 171);
+    z-index: 999;
   }
 
   .navbarlist li {
     margin-bottom: 25px;
+    font-size: 20px;
   }
   .navbarlist.active {
     right: 0px;
+  }
+  .add-to-cart {
+    font-size: 10px;
   }
 }
