--- a/src/components/About.css
+++ b/src/components/About.css
@@ -47,6 +47,8 @@
     }
     .members{
         flex-direction: column;
+        position: relative;
+        bottom:30px;
     }
     .heading{
         position: relative;
@@ -63,7 +65,7 @@
     .below{
         font-size: 20px;
         position:relative;
-        bottom:40px;
+        bottom:10px;
     }
     
     
@@ -96,7 +98,7 @@
   .card p {
     font-size: 20px;
     position: relative;
-    top:8px;
+    top:15px;
     left:52px;
   }
   .below{
