--- a/src/components/FeatureProduct/index.css
+++ b/src/components/FeatureProduct/index.css
@@ -5,7 +5,7 @@
   align-items: center;
   background-color: green;
   width: 100%;
-  height:fit-content;
+  height: fit-content;
   flex-basis: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -56,12 +56,10 @@
 .card span {
   font-size: 25px;
   position: relative;
-  top:10px;
-  left:40px;
+  top: 10px;
+  left: 40px;
   background-color: #2f2f2f;
 }
-
-
 
 .down {
   position: relative;
@@ -90,8 +88,8 @@
   font-family: Jost;
   color: rgba(163, 163, 163, 1);
   font-size: 10px;
-  position:relative;
-  top:30px;
+  position: relative;
+  top: 30px;
 }
 
 /* Main Last */
@@ -125,7 +123,7 @@
 .address {
   position: relative;
   top: 250px;
-  left:20%;
+  left: 20%;
 }
 .address span {
   font-size: 50px;
@@ -182,7 +180,7 @@ input[type="search"] {
   z-index: 1;
   position: relative;
 }
-button {
+#submit {
   display: none;
   position: absolute;
   top: 0;
@@ -210,22 +208,20 @@ label {
   overflow: hidden;
 }
 
-@media screen and (max-width: 1200px) 
-{
+@media screen and (max-width: 1200px) {
   .featureproduct {
     flex-direction: column-reverse;
     height: 500px;
     justify-content: center;
     align-items: flex-start;
   }
-  .product{
-    width:100%;
+  .product {
+    width: 100%;
     align-items: center;
     padding-left: 80px;
     padding-right: 80px;
   }
 }
-
 
 @media screen and (max-width: 769px) {
   .featureproduct {
@@ -264,37 +260,37 @@ label {
   }
 }
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 480px) {
   .search {
     left: 250px;
   }
-  .services{
+  .services {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
   }
-  .services img{
-    position:absolute;
-    left:60px;
+  .services img {
+    position: absolute;
+    left: 60px;
   }
-  .services section{
-    margin:10px;
+  .services section {
+    margin: 10px;
   }
-  .services h2{
-    position:relative;
-    left:10px;
+  .services h2 {
+    position: relative;
+    left: 10px;
   }
-  .two h2{
-    position:relative;
-    left:42px;
+  .two h2 {
+    position: relative;
+    left: 42px;
   }
-  .three h2{
-    position:relative;
-    left:46px;
+  .three h2 {
+    position: relative;
+    left: 46px;
   }
   .address span {
     font-size: 28px;
     position: relative;
-    right:50px;
+    right: 50px;
   }
 }
