--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -83,6 +83,29 @@ nav {
   color: black;
 }
 
+/* Cart Css */
+.cart {
+  cursor: pointer;
+  position: fixed;
+  top: 24px;
+  right: 30px;
+}
+
+.cart span:nth-child(1) {
+  font-size: 2rem;
+  color: green;
+}
+
+.cart span:nth-child(2) {
+  padding: 0 3px;
+  background-color: red;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  position: relative;
+  top: -15px;
+}
+
 @keyframes add-to-cart-animation {
   0% {
     transform: scale(1);
@@ -105,7 +128,7 @@ nav {
   .SignInUp {
     position: fixed;
     top: 20px;
-    right: 20px;
+    right: 90px;
   }
 }
 
