--- a/Frontend/src/components/Navbar/index.css
+++ b/Frontend/src/components/Navbar/index.css
@@ -226,3 +226,15 @@ nav {
     font-size: 10px;
   }
 }
+
+.userProfile {
+  font-size: 25px;
+  position: relative;
+  right: 25px;
+  bottom: 3px;
+  border: 4px solid black;
+  border-radius: 35px;
+}
+.userProfile i {
+  padding: 8px;
+}
