--- a/Frontend/src/Pages/Cart/index.css
+++ b/Frontend/src/Pages/Cart/index.css
@@ -71,3 +71,9 @@
   left: 50%;
   transform: translate(-40%, -90%);
 }
+
+@media screen and (max-width: 600px) {
+  .cart-container {
+    font-size: 8px;
+  }
+}
