--- a/Frontend/src/Pages/Shop/index.css
+++ b/Frontend/src/Pages/Shop/index.css
@@ -20,6 +20,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: row;
+  height: 120vh;
 }
 .Category-Filter {
   background-color: white;
@@ -27,6 +28,8 @@
   margin: 5px;
   border-radius: 20px 0 0 20px;
   border-right: rgba(69, 117, 91, 1) 4px solid;
+  display: flex;
+  justify-content: center;
 }
 .product1 {
   background-color: white;
@@ -86,4 +89,37 @@
   font-size: 30px;
   text-align: center;
   padding: 15px;
+}
+
+.category-form {
+  background-color: white;
+  border: none;
+  color: black;
+  width: 80%;
+  padding: 15px;
+  margin: 10px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.category-form input {
+  height: 25px;
+  width: 25px;
+  display: inline;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.category-form label {
+  font-size: 20px;
+  position: relative !important;
+  overflow: unset;
+}
+.checkbox-group {
+  display: flex;
+}
+.category-submit {
+  height: 10% !important;
+  width: 100% !important;
+  border-radius: 20px !important;
+  cursor: pointer;
 }
