--- a/Frontend/src/components/Modal/index.css
+++ b/Frontend/src/components/Modal/index.css
@@ -36,12 +36,22 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     background-color: #F3F4F6;
     padding: 24px;
+    
 }
 
 .modal-form {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    height: 70vh;
+    width: 50vw;
+    padding: 20px;
+    margin: 0 auto;
+}
+
+.modal-form label{
+    overflow: visible;
+    position: relative;
 }
 
 .modal-input {
