--- a/Frontend/src/Pages/Contact/index.css
+++ b/Frontend/src/Pages/Contact/index.css
@@ -2,7 +2,8 @@
   overflow:hidden;
   background-color: rgba(251, 250, 243, 1);
   width: 100vw;
-  height: 800px;
+  min-height: 800px;
+  height: fit-content;
   padding-top: 70px;
   display: flex;
   flex-direction: column;
